user account remove button position fix on smaller screens

--- a/src/components/Movies/MovieOverview/MovieOverview.module.css
+++ b/src/components/Movies/MovieOverview/MovieOverview.module.css
@@ -95,8 +95,7 @@
 
   @media all and (max-width: 55em) {
       .movie-overview-section {
-        width: 90%;
-        margin-bottom: 2rem;
+        margin-bottom: 6rem;
       
         display: grid;
         justify-content: center;
@@ -114,6 +113,4 @@
         top: -4rem;
         right: -5rem;
       }
-
-     
-     }
+    }
