--- a/src/components/Pages/UserPage/UserPage.module.css
+++ b/src/components/Pages/UserPage/UserPage.module.css
@@ -4,7 +4,7 @@
 }
 
 .container {
-  width: 90%;
+  width: 70%;
   margin: 0 auto;
 }
 
