--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,7 @@ body {
   background-color: #000;
   color: #fff;
   font-family: 'Montserrat', sans-serif;
+  overflow-x: hidden;
 }
 
 main {
